# docu-lite-kit

./: .gitignore  README.md  demo.py  demo_minimal.py  dlk.json  py_file_for_demo.py  py_file_for_demo_no_root_docstring.py  pybonsai.JSON  pyproject.toml
dlk/: __init__.py  cli.py  dlkParse.py
misc/: html.py  pyparse_ast.py
pybonsai/: __init__.py  cli.py  docu-lite-style.css  parsed_blocks.json  pbParse.py  pyparse.py  pyparse_flat.py  pyparse_v2.py  test.html  tree.txt
